
ElasticSearch-Carrot2 Change Log

================ master ====================

================ ElasticSearch-Carrot2 7.12.0 ===================

* ES 7.12.0 compatibility build.

* Upgrade to Carrot2 4.2.1.

================ ElasticSearch-Carrot2 7.11.2 ===================

* ES 7.11.2 API changes and compatibility build.

================ ElasticSearch-Carrot2 7.10.2 ===================

* ES 7.10.2 compatibility build.

================ ElasticSearch-Carrot2 7.10.1 ===================

* ES 7.10.1 compatibility build.

================ ElasticSearch-Carrot2 7.10.0 ===================

* ES 7.10.0 compatibility build.

* Cleanups of build infrastructure.

================ ElasticSearch-Carrot2 7.9.3 ====================

* ES 7.9.3 compatibility build.

================ ElasticSearch-Carrot2 7.9.2 ====================

* ES 7.9.2 compatibility build.

================ ElasticSearch-Carrot2 7.8.1 ====================

* ES 7.8.1 compatibility build.

* Upgrade to Carrot2 4.0.4.

================ ElasticSearch-Carrot2 7.7.1 ====================

Other changes

* Upgrade to Carrot2 4.0.3. Adjust to API changes in language resources.

* API updates to ES 7.7.1. Build scripts updates.

================ ElasticSearch-Carrot2 7.6.0 ====================

Backward-incompatible changes

* Upgrade of Carrot2 to 4.0.0-beta3. This results in a number of backward-incompatible
  changes to the plugin.

  1) The local field for URL (and the corresponding mapping) is gone without replacement.
  2) Names of clustering algorithms have changed. They are now (note white space):
     Lingo, STC, Bisecting K-Means, Lingo3G (optional, commercial)
  3) The language field is no longer a two-letter code. The list of supported languages
     depends on the algorithm and availability of resources and is printed at startup;
     (service extension points are used to load algorithms and languages).
  4) Names and structure of attributes for clustering algorithms have changed. They reflect